# abap-parser-lite

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: basic_usage.py
src/abap_parser_lite/: __init__.py  cli.py  core.py  models.py
tests/: test_edge.py  test_normal.py
tests/fixtures/: class_with_methods.abap  function_group.abap  simple_report.abap
