[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abap-parser-lite"
version = "0.1.0"
description = "Lightweight regex-based ABAP source code parser"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["abap", "sap", "parser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
abap-parser-lite = "abap_parser_lite.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/abap_parser_lite"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
